# awesome

./: .busted  .dockerignore  .editorconfig  .gitignore  .luacheckrc  .luacov  .mergify.yml  .travis.yml  AUTHORS  AutoOption.cmake  BUGS  CMakeLists.txt  CONTRIBUTING.md  Fedora.README.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile.am  PATCHES  Packaging.cmake  README  README.md  STYLE  TODO  UPGRADE  as_ac_expand.m4  autogen.sh  awesome-check.c  awesome-client-common.c  awesome-client.1.txt  awesome-client.c  awesome-client.h  awesome-menu.1.txt  awesome-menu.c  awesome-message.1.txt  awesome-message.c  awesome-version-internal.h  awesome-version-internal.h.in  awesome.1  awesome.1.txt  (+144 more)
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml
.github/scripts/: apidoc.sh  ldoc-check-errors.sh
.github/workflows/: apidoc.yml  main.yml
build-tests/: __builtin_clz.c  execinfo.c
build-utils/: atoms-ext.sh  atoms-int.sh  check_for_invalid_requires.lua  coverage-gcov.sh  dist.sh  extractdoc.py  extractoptsdoc.py  extractrcskeleton.py  extractuicbdoc.py  fake-lua-src.lua  gendoc.lua  git-version-stamp.sh  gperf.sh  layoutgen.sh  lgi-check.c  lgi-check.sh  package-codename  package-version  setup-for-debian.sh  travis-apidoc.sh  uicbgen.sh  widgetgen.sh
cmake/: extra_warnings.cmake
common/: array.h  atoms.c  atoms.h  atoms.list  awclient.c  awclient.h  awesome-version.c  awesome-version.h  backtrace.c  backtrace.h  buffer.c  buffer.h  configopts.c  configopts.h  draw.c  draw.h  list.h  luaclass.c  luaclass.h  lualib.c  lualib.h  luaobject.c  luaobject.h  markup.c  markup.h  refcount.h  signal.h  socket.c  socket.h  swindow.c  swindow.h  tokenize.gperf  util.c  util.h  version.c  version.h  xcursor.c  xcursor.h  xembed.c  xembed.h  (+4 more)
docker/: Dockerfile  Makefile  build-and-test
docs/: 00-authors.md  01-readme.md  02-contributing.md  03-declarative-layout.md  04-new-widgets.md  05-awesomerc.md.lua  06-appearance.md.lua  07-my-first-awesome.md  08-client-layout-system.md  09-options.md  10-building-and-testing.md  10-installation-guide.md  16-using-cairo.md  17-porting-tips.md  89-NEWS.md  90-FAQ.md  _parser.lua  build_rules_index.lua  config.ld  config.ld.in  doing_a_release.md  generate_examples.cmake  ldoc.css  ldoc.ltp  load_ldoc.cmake  sample_files.lua  sample_theme.lua  widget_lists.cmake
docs/aliases/: awful_client.lua  awful_mouse.lua  awful_screen.lua  awful_tag.lua
docs/capi/: awesome.lua.in  button.lua.in  client.lua.in  dbus.lua.in  drawable.lua.in  drawin.lua.in  key.lua.in  keygrabber.lua.in  mouse.lua.in  mousegrabber.lua.in  root.lua.in  screen.lua.in  selection.lua.in  tag.lua.in  timer.lua.in
docs/common/: client_theme.ldoc  cobject.ldoc  cursor.ldoc  cursor_c.ldoc  cursor_c_lua.ldoc  fixed.ldoc  glib_timedate_format.ldoc  notification_rules_index.ldoc  (+7 more)
layouts/: Makefile-files  fair.c  fair.h  fibonacci.c  fibonacci.h  floating.c  floating.h  grid.c  grid.h  magnifier.c  magnifier.h  max.c  max.h  spiral.c  spiral.h  tile.c  tile.h
lib/: awful.lua  awful.lua.in  beautiful.lua  beautiful.lua.in  invaders.lua.in  naughty.lua  naughty.lua.in  otable.lua.in  revelation.lua.in  tabulous.lua  tabulous.lua.in  telak.lua.in
luadoc/: awesome.lua  button.lua  client.lua  dbus.lua  drawable.lua  drawin.lua  image.lua  key.lua  keygrabber.lua  mouse.lua  mousegrabber.lua  root.lua  screen.lua  selection.lua  tag.lua  timer.lua  wibox.lua  widget.lua
manpages/: awesome-client.1.de.txt  awesome-client.1.es.txt  awesome-client.1.fr.txt  awesome-client.1.it.txt  awesome-client.1.ru.txt  awesome-client.1.txt  awesome.1.de.txt  awesome.1.es.txt  awesome.1.fr.txt  awesome.1.it.txt  awesome.1.ru.txt  awesome.1.txt  awesomerc.5.de.txt  awesomerc.5.es.txt  awesomerc.5.fr.txt  awesomerc.5.it.txt  awesomerc.5.ru.txt  awesomerc.5.txt  awsetbg.1.de.txt  awsetbg.1.es.txt  awsetbg.1.fr.txt  awsetbg.1.it.txt  awsetbg.1.ru.txt  awsetbg.1.txt
objects/: button.c  button.h  client.c  client.h  drawable.c  drawable.h  drawin.c  drawin.h  image.c  image.h  key.c  key.h  screen.c  screen.h  selection.c  selection.h  selection_acquire.c  selection_acquire.h  selection_getter.c  selection_getter.h  selection_transfer.c  selection_transfer.h  selection_watcher.c  selection_watcher.h  tag.c  tag.h  timer.c  timer.h  wibox.c  wibox.h  widget.c  widget.h  window.c  window.h
protocols/: way-cooler-mousegrabber-unstable-v1.xml
spec/: preload.lua
t/: _runner.lua  run.sh  test-focus.lua  test-urgent.lua
tests/: _client.lua  _multi_screen.lua  _runner.lua  _svg_capture.lua  _wibox_helper.lua  run.sh  test-awesomerc.lua  test-awful-client.lua  test-awful-layout.lua  test-awful-mouse.lua  test-awful-placement.lua  test-awful-popup-hide-on-click.lua  test-awful-rules.lua  test-awful-screen.lua  test-awful-tag.lua  test-awful-widget-button.lua  test-awful-widget-calendar_popup.lua  test-awful-widget-only_on_screen.lua  test-awful-widget-watch.lua  test-benchmark.lua  test-client-borders.lua  test-client-shape-input.c  test-client-shape.lua  test-client-signals.lua  test-client-swap.lua  test-current-desktop.lua  test-dbus-error.lua  test-dpi.lua  test-drawable-bgimage.lua  test-ewmh-wm_moveresize.lua  test-focus-bydirection.lua  test-focus.lua  test-gears-watcher.lua  test-geometry.lua  test-gravity.c  test-gravity.lua  test-input-binding.lua  test-keyboard-layout-changes.lua  test-keycodes.lua  test-keygrabber.lua  (+37 more)
themes/: default  default.in
utils/: awesome-client  awsetbg
wayland/: README.md  drawable.c  drawable.h  drawin.c  drawin.h  globals.c  globals.h  mousegrabber.c  mousegrabber.h  root.c  root.h  screen.c  screen.h  utils.c  utils.h
widgets/: Makefile-files  appicon.c  common.c  common.h  emptybox.c  focusicon.c  focustitle.c  graph.c  iconbox.c  imagebox.c  layoutinfo.c  netwmicon.c  progressbar.c  systray.c  taglist.c  tasklist.c  textbox.c  workspacelist.c
x11/: README.md  drawable.c  drawable.h  drawin.c  drawin.h  event.c  event.h  ewmh.h  globals.c  globals.h  mousegrabber.c  mousegrabber.h  property.c  root.c  root.h  screen.c  screen.h  selection.c  xwindow.c
(+1136 files in other folders)
